.provarCaches/00D410000011HE0EAM/objects/rstk__socustmsac__c.object
<CustomObject>
    <description>socustmsac__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>externalid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__socustmsac_socustmsa__r.rstk__externalid__c &amp;&apos;_&apos;&amp; TEXT(rstk__socustmsac_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__socustmsac_socustmsa__r.Name &amp;&apos;-&apos;&amp; TEXT(rstk__socustmsac_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsac_chgcomment__c</fullName>
        <label>Change Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsac_clause__c</fullName>
        <inlineHelpText>Required user-defined field, containing the textual content for this Clause.</inlineHelpText>
        <label>Clause Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsac_currev__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The Current Revision level for this particular Master Services Agreement Clause, which is automatically incremented as changes are made.</description>
        <inlineHelpText>The Current Revision level for this particular Master Services Agreement Clause, which is automatically incremented as changes are made.</inlineHelpText>
        <label>Current Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsac_deletable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that the Clause can be deleted.  Note that once a Clause is in use, it cannot be deleted from Salesforce, but the &apos;Deleted&apos; checkbox will be set to TRUE and this Clause will no longer be able to be used going forward.</inlineHelpText>
        <label>Clause can be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsac_deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this Clause has been flagged as deleted.</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsac_desc__c</fullName>
        <inlineHelpText>User-define alpha-numeric optional description up to 100 characters in length.</inlineHelpText>
        <label>Clause Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsac_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Sales Division for which this Customer Master Service Agreement applies.</inlineHelpText>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Customer MSA Clause</relationshipLabel>
        <relationshipName>socustmsacs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsac_editable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, allows the editing of this Clause Content.</inlineHelpText>
        <label>Clause Content can be Edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsac_revdate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>The Current Revision Date for this particular Master Services Agreement Clause, which is automatically updated as changes are made and the Revision level is incremented.</inlineHelpText>
        <label>Current Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsac_seq__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MSA Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsac_socustmsa__c</fullName>
        <inlineHelpText>The Customer Master Services Agreement that this Claus is associated with.</inlineHelpText>
        <label>Customer MSA</label>
        <referenceTo>rstk__socustmsa__c</referenceTo>
        <relationshipLabel>Customer MSA Clause</relationshipLabel>
        <relationshipName>socustmsacs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsac_somsac__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Clause</label>
        <referenceTo>rstk__somsac__c</referenceTo>
        <relationshipLabel>Customer MSA Clause</relationshipLabel>
        <relationshipName>socustmsacs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsac_title__c</fullName>
        <inlineHelpText>User-defined alpha-numeric required title for this Customer Master Agreement Clause.</inlineHelpText>
        <label>Clause Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Customer MSA Clause</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer MSA Clause</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer MSA Clause</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Clause_Content_Required</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(rstk__socustmsac_clause__c) == 0</errorConditionFormula>
        <errorMessage>Clause Content is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Clause_Title_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__socustmsac_title__c)</errorConditionFormula>
        <errorMessage>Clause Title is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Customer_MSA_required_in_New_mode</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),ISBLANK(rstk__socustmsac_socustmsa__c))</errorConditionFormula>
        <errorMessage>Customer MSA is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Customer_MSA_should_belong_to_same_div</fullName>
        <active>true</active>
        <description>Customer MSA Should belong to the same division</description>
        <errorConditionFormula>rstk__socustmsac_socustmsa__r.rstk__socustmsa_div__c != rstk__socustmsac_div__c</errorConditionFormula>
        <errorMessage>Customer MSA Should belong to the same division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Deleted_must_be_false_if_deletable_false</fullName>
        <active>true</active>
        <errorConditionFormula>AND(rstk__socustmsac_deletable__c = false, rstk__socustmsac_deleted__c = true)</errorConditionFormula>
        <errorMessage>&apos;Deleted&apos; must be false when &apos;Clause can be deleted&apos; is set to false</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Division_Required</fullName>
        <active>true</active>
        <description>Sales Division is Required</description>
        <errorConditionFormula>ISBLANK(rstk__socustmsac_div__c)</errorConditionFormula>
        <errorMessage>Sales Division is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__MSA_Sequence_Required_and_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(rstk__socustmsac_seq__c), rstk__socustmsac_seq__c &lt;= 0)</errorConditionFormula>
        <errorMessage>MSA Sequence is required and must be greater than 0</errorMessage>
    </validationRules>
</CustomObject>